--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,20 @@
 <app-header />
 <main>
   <ul id="users">
-    <li *ngFor="let user of users">
-      <app-user [user]="user" />
+    @for (user of users; track user.id) {
+    <li>
+      <app-user
+        [user]="user"
+        [selected]="selectedUser?.id === user.id"
+        (select)="onUserSelect($event)"
+      />
     </li>
+    }
   </ul>
+
+  @if (selectedUser) {
+  <app-user-tasks [user]="selectedUser" />
+  } @else {
+  <p>Please select a user to see tasks.</p>
+  }
 </main>
