--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,6 +1,6 @@
-<div>
-  <button (click)="onHandleUserClick()">
+<app-card>
+  <button [class.active]="selected" (click)="onHandleUserClick()">
     <img [src]="imagePath" [alt]="user.name" />
     <span>{{ user.name }}</span>
   </button>
-</div>
+</app-card>
